Resolve "Improve Defender movement around PenArea"
Closes #1860

See merge request main/Sumatra!1669

sumatra-commit: 82f439a2b7c92d8d8be06386611dd8a2d5dc8959